Properly account for zero-padding in filter dates

Custom dates would have dates in format yyy-M-d, not ISO format,
i.e not zero-padded. Correct for the problem, and also fix the issue
when saving

BUG: 361625
FIXED-IN: 2.3.12

Conflicts:
	src/translators/tellicoxmlexporter.cpp