src/filter.cpp
@@ -169,7 +169,9 @@ bool FilterRule::before(Tellico::Data::EntryPtr entry_) const {
     return false;
   }
   const QDate pattern = m_patternVariant.toDate();
-  const QDate value = QDate::fromString(entry_->field(m_fieldName), Qt::ISODate);
+//  const QDate value = QDate::fromString(entry_->field(m_fieldName), Qt::ISODate);
+  // Bug 361625: some older versions of Tellico serialized the date with single digit month and day
+  const QDate value = QDate::fromString(entry_->field(m_fieldName), QLatin1String("yyyy-M-d"));
   return value.isValid() && value < pattern;
 }
 
@@ -180,7 +182,9 @@ bool FilterRule::after(Tellico::Data::EntryPtr entry_) const {
     return false;
   }
   const QDate pattern = m_patternVariant.toDate();
-  const QDate value = QDate::fromString(entry_->field(m_fieldName), Qt::ISODate);
+//  const QDate value = QDate::fromString(entry_->field(m_fieldName), Qt::ISODate);
+  // Bug 361625: some older versions of Tellico serialized the date with single digit month and day
+  const QDate value = QDate::fromString(entry_->field(m_fieldName), QLatin1String("yyyy-M-d"));
   return value.isValid() && value > pattern;
 }
 
